Closed Bug 1728940 Opened 4 years ago Closed 4 years ago

Perma [tier 2] bgcc /builds/worker/checkouts/gecko/accessible/atk/nsMaiInterfaceValue.cpp:69:30: error: 'this' pointer is null [-Werror=nonnull]

Categories

(Core :: Disability Access APIs, defect, P5)

defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- unaffected
firefox93 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: eeejay)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: malexandru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=350411885&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/KA641ybWSnK-QNv5Ynq-Qg/runs/1/artifacts/public/logs/live_backing.log


[task 2021-09-03T04:31:39.469Z] 04:31:39     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/accessible/atk'
[task 2021-09-03T04:31:39.469Z] 04:31:39     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -o nsMaiInterfaceValue.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/accessible/atk -I/builds/worker/workspace/obj-build/accessible/atk -I/builds/worker/checkouts/gecko/accessible/base -I/builds/worker/checkouts/gecko/accessible/generic -I/builds/worker/checkouts/gecko/accessible/html -I/builds/worker/checkouts/gecko/accessible/ipc -I/builds/worker/checkouts/gecko/accessible/ipc/other -I/builds/worker/checkouts/gecko/accessible/xpcom -I/builds/worker/checkouts/gecko/accessible/xul -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/other-licenses/atk-1.0 -I/builds/worker/checkouts/gecko/widget -I/builds/worker/checkouts/gecko/widget/gtk -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wno-invalid-offsetof -Wc++2a-compat -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wno-multistatement-macros -Wno-error=class-memaccess -Wno-error=deprecated-copy -Wno-error=unused-but-set-variable -Wformat -Wformat-overflow=2 -Wno-psabi -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fno-strict-aliasing -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fno-omit-frame-pointer -funwind-tables -Werror -I/builds/worker/checkouts/gecko/widget/gtk/compat-gtk3 -pthread -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/unix-print -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -Wno-error=unused-function -Wno-error=shadow -Wno-unused-local-typedefs  -MD -MP -MF .deps/nsMaiInterfaceValue.o.pp   /builds/worker/checkouts/gecko/accessible/atk/nsMaiInterfaceValue.cpp
[task 2021-09-03T04:31:39.469Z] 04:31:39     INFO -  In function 'void getMinimumIncrementCB(AtkValue*, GValue*)',
[task 2021-09-03T04:31:39.469Z] 04:31:39     INFO -      inlined from 'void getMinimumIncrementCB(AtkValue*, GValue*)' at /builds/worker/checkouts/gecko/accessible/atk/nsMaiInterfaceValue.cpp:62:13:
[task 2021-09-03T04:31:39.469Z] 04:31:39    ERROR -  /builds/worker/checkouts/gecko/accessible/atk/nsMaiInterfaceValue.cpp:69:30: error: 'this' pointer is null [-Werror=nonnull]
[task 2021-09-03T04:31:39.469Z] 04:31:39     INFO -     69 |   double accValue = acc->Step();
[task 2021-09-03T04:31:39.469Z] 04:31:39     INFO -        |                     ~~~~~~~~~^~
[task 2021-09-03T04:31:39.470Z] 04:31:39     INFO -  In function 'void getMinimumValueCB(AtkValue*, GValue*)',
[task 2021-09-03T04:31:39.470Z] 04:31:39     INFO -      inlined from 'void getMinimumValueCB(AtkValue*, GValue*)' at /builds/worker/checkouts/gecko/accessible/atk/nsMaiInterfaceValue.cpp:48:13:
[task 2021-09-03T04:31:39.470Z] 04:31:39    ERROR -  /builds/worker/checkouts/gecko/accessible/atk/nsMaiInterfaceValue.cpp:55:34: error: 'this' pointer is null [-Werror=nonnull]
[task 2021-09-03T04:31:39.470Z] 04:31:39     INFO -     55 |   double accValue = acc->MinValue();
[task 2021-09-03T04:31:39.470Z] 04:31:39     INFO -        |                     ~~~~~~~~~~~~~^~
[task 2021-09-03T04:31:39.471Z] 04:31:39     INFO -  In function 'void getMaximumValueCB(AtkValue*, GValue*)',
[task 2021-09-03T04:31:39.472Z] 04:31:39     INFO -      inlined from 'void getMaximumValueCB(AtkValue*, GValue*)' at /builds/worker/checkouts/gecko/accessible/atk/nsMaiInterfaceValue.cpp:34:13:
[task 2021-09-03T04:31:39.472Z] 04:31:39    ERROR -  /builds/worker/checkouts/gecko/accessible/atk/nsMaiInterfaceValue.cpp:41:34: error: 'this' pointer is null [-Werror=nonnull]
[task 2021-09-03T04:31:39.472Z] 04:31:39     INFO -     41 |   double accValue = acc->MaxValue();
[task 2021-09-03T04:31:39.473Z] 04:31:39     INFO -        |                     ~~~~~~~~~~~~~^~
[task 2021-09-03T04:31:39.473Z] 04:31:39     INFO -  In function 'void getCurrentValueCB(AtkValue*, GValue*)',
[task 2021-09-03T04:31:39.474Z] 04:31:39     INFO -      inlined from 'void getCurrentValueCB(AtkValue*, GValue*)' at /builds/worker/checkouts/gecko/accessible/atk/nsMaiInterfaceValue.cpp:20:13:
[task 2021-09-03T04:31:39.474Z] 04:31:39    ERROR -  /builds/worker/checkouts/gecko/accessible/atk/nsMaiInterfaceValue.cpp:27:34: error: 'this' pointer is null [-Werror=nonnull]
[task 2021-09-03T04:31:39.474Z] 04:31:39     INFO -     27 |   double accValue = acc->CurValue();
[task 2021-09-03T04:31:39.475Z] 04:31:39     INFO -        |                     ~~~~~~~~~~~~~^~
[task 2021-09-03T04:31:39.475Z] 04:31:39     INFO -  cc1plus: all warnings being treated as errors
[task 2021-09-03T04:31:39.475Z] 04:31:39    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:674: nsMaiInterfaceValue.o] Error 1
[task 2021-09-03T04:31:39.475Z] 04:31:39     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/accessible/atk'
[task 2021-09-03T04:31:39.475Z] 04:31:39    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: accessible/atk/target-objects] Error 2
[task 2021-09-03T04:31:39.475Z] 04:31:39     INFO -  gmake[3]: *** Waiting for unfinished jobs....
[task 2021-09-03T04:31:39.475Z] 04:31:39     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/i18n'
[task 2021-09-03T04:31:39.475Z] 04:31:39     INFO -  config/external/icu/i18n/collationbuilder.o
[task 2021-09-03T04:31:39.475Z] 04:31:39     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/icu/i18n'
[task 2021-09-03T04:31:39.518Z] 04:31:39     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2021-09-03T04:31:39.518Z] 04:31:39     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -o loadednormalizer2impl.o -c  -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DU_COMMON_IMPLEMENTATION -DU_USING_ICU_NAMESPACE=0 -DU_NO_DEFAULT_INCLUDE_UTF_HEADERS=1 -DU_HIDE_OBSOLETE_UTF_OLD_H=1 -DUCONFIG_NO_LEGACY_CONVERSION -DUCONFIG_NO_TRANSLITERATION -DUCONFIG_NO_REGULAR_EXPRESSIONS -DU_CHARSET_IS_UTF8 -DUNISTR_FROM_CHAR_EXPLICIT=explicit -DUNISTR_FROM_STRING_EXPLICIT=explicit -DU_ENABLE_DYLOAD=0 -DU_HAVE_NL_LANGINFO_CODESET=0 -I/builds/worker/checkouts/gecko/config/external/icu/common -I/builds/worker/workspace/obj-build/config/external/icu/common -I/builds/worker/checkouts/gecko/intl/icu/source/i18n -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wno-invalid-offsetof -Wc++2a-compat -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wno-multistatement-macros -Wno-error=class-memaccess -Wno-error=deprecated-copy -Wno-error=unused-but-set-variable -Wformat -Wformat-overflow=2 -Wno-psabi -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fno-strict-aliasing -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fno-omit-frame-pointer -funwind-tables -Wno-deprecated-declarations -Wno-type-limits -Wno-unused-but-set-variable -Wno-unused-function -Wno-sign-compare -Wno-maybe-uninitialized -frtti  -MD -MP -MF .deps/loadednormalizer2impl.o.pp   /builds/worker/checkouts/gecko/intl/icu/source/common/loadednormalizer2impl.cpp
[task 2021-09-03T04:31:39.518Z] 04:31:39     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/icu/common'

Eitan, could you please take a look?

Flags: needinfo?(eitan)

Set release status flags based on info from the regressing bug 1728624

Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bfbef2b417a1 Reverse reverted null check in ATK value functions. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Flags: needinfo?(eitan)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: