Bug 1728940 - Reverse reverted null check in ATK value functions. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D124480